fix: The latest post block - post titles overlapping. (#61356)

--- a/packages/block-library/src/latest-posts/style.scss
+++ b/packages/block-library/src/latest-posts/style.scss
@@ -16,6 +16,7 @@
 
 		li {
 			clear: both;
+			overflow-wrap: break-word;
 		}
 	}
 
